<resources>
    <string name="app_name">Файлы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table_DateOf">Дата создания :</string>
    <string name="table_size">Размер</string>
    <string name="table_fileName">Имя файла</string>
    <string name="menu_Sort">Сортировка</string>
    <string name="menu_ByName">↑ По имени</string>
    <string name="menu_BySize">↑ По размеру</string>
    <string name="menu_ByDate">↑ По дате создания</string>
    <string name="menu_ByExtension">↑ По расширению</string>
    <string name="table_imangeDesc">Icon</string>
    <string name="menu_changedFiles">Измененные файлы</string>
    <string name="delDialog_yes">Да</string>
    <string name="delDialog_no">Нет</string>
    <string name="delDialog_ask">Удалить выбранный файл?</string>
</resources>