<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/i1"
        android:title="@string/menu_Sort">
        <menu>
            <item
                android:id="@+id/name"
                android:title="@string/menu_ByName"/>
            <item
                android:id="@+id/size"
                android:title="@string/menu_BySize"/>
            <item
                android:id="@+id/date"
                android:title="@string/menu_ByDate"/>
            <item
                android:id="@+id/extension"
                android:title="@string/menu_ByExtension"/>
        </menu>
    </item>
    <item
        android:id="@+id/changedFiles"
        android:checkable="true"
        android:title="@string/menu_changedFiles"/>
</menu>